k8s/etapa-4.1/03-require-labels.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-labels
  annotations:
    policies.kyverno.io/title: Require TipsBank Labels
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Deployment,StatefulSet,DaemonSet
    policies.kyverno.io/description: >-
      Exige as labels app, team e env nos workloads do TipsBank.
spec:
  validationFailureAction: Enforce
  background: true

  rules:
    - name: require-workload-labels
      match:
        any:
          - resources:
              kinds:
                - Deployment
                - StatefulSet
                - DaemonSet
              namespaces:
                - tipsbank-contas
                - tipsbank-transacoes
                - tipsbank-auditoria
                - tipsbank-web

      validate:
        message: >-
          O recurso e seu Pod template devem possuir as labels app, team e env.
        pattern:
          metadata:
            labels:
              app: "?*"
              team: "?*"
              env: "?*"
          spec:
            template:
              metadata:
                labels:
                  app: "?*"
                  team: "?*"
                  env: "?*"

    - name: require-labels-node-logger
      match:
        any:
          - resources:
              kinds:
                - DaemonSet
              namespaces:
                - tipsbank-monitoring
              names:
                - node-logger

      validate:
        message: >-
          O DaemonSet node-logger deve possuir as labels app, team e env.
        pattern:
          metadata:
            labels:
              app: "?*"
              team: "?*"
              env: "?*"
          spec:
            template:
              metadata:
                labels:
                  app: "?*"
                  team: "?*"
                  env: "?*"

    - name: require-labels-locust
      match:
        any:
          - resources:
              kinds:
                - Deployment
              namespaces:
                - tipsbank-monitoring
              names:
                - locust

      validate:
        message: >-
          O Deployment locust deve possuir as labels app, team e env.
        pattern:
          metadata:
            labels:
              app: "?*"
              team: "?*"
              env: "?*"
          spec:
            template:
              metadata:
                labels:
                  app: "?*"
                  team: "?*"
                  env: "?*"
